# Doc-Sync

./: .gitignore  CLAUDE.md  Makefile  README.md
fastapi_backend/: .coveragerc  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  test.py  test_create_functionality.py  vercel.json
fastapi_backend/app/: config.py  database.py  main.py  models.py  supabase.py
fastapi_backend/app/api/: dependencies.py  middleware.py
fastapi_backend/app/core/: exceptions.py  logging.py
fastapi_backend/app/core/repositories/: content_repository.py  document_repository.py
fastapi_backend/app/core/services/: document_service.py  edit_service.py
fastapi_backend/app/models/: documents.py  edit_documentation.py  websocket_events.py
fastapi_backend/app/routes/: documents.py  edit_documentation.py  items.py  websocket.py
fastapi_backend/app/services/: content_processor.py  editor.py  openai_service.py  prompts.py
fastapi_backend/app/services/agents/: __init__.py  create_content_agent.py  delete_content_agent.py  edit_agent.py  edit_suggestion_agent.py  editor_agent.py  (+2 more)
fastapi_backend/commands/: generate_openapi_schema.py
fastapi_backend/tests/: conftest.py  test_error_scenarios.py  test_refactored_functionality.py
fastapi_backend/tests/core/: test_config.py  test_exceptions.py
fastapi_backend/tests/main/: test_main.py
fastapi_backend/tests/routes/: test_documents.py  test_edit_documentation.py  test_items.py
fastapi_backend/tests/services/: test_content_processor.py  test_editor.py  test_openai_service.py
fastapi_backend/tests/utils/: test_utils.py
(+64 files in other folders)
